--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="main">
+      <div id="title">
+        Loading....
+      </div>
       <img src="" alt="" class="img" />
       <button class="btn" onclick="getCatGif()">Another Random Cat Gif</button>
     </div>
