--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div class="main">
-      <div id="title">
+      <div class="box">
+        <div id="title">
+        </div>
+        <img src="" alt="" class="img" />
+        <button class="btn" onclick="getCatGif()">Another Random Cat Gif</button>
       </div>
-      <img src="" alt="" class="img" />
-      <button class="btn" onclick="getCatGif()">Another Random Cat Gif</button>
     </div>
     <script src="main.js"></script>
   </body>
