--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       <div class="box">
         <div id="title">
         </div>
+        <div class="none">
+        <h1>Random Cat Gifs</hl>
         <img src="" alt="" class="img" />
         <button class="btn" onclick="getCatGif()">Another Random Cat Gif</button>
       </div>
